--- a/arch/arm64/configs/fsimx8ulp_defconfig
+++ b/arch/arm64/configs/fsimx8ulp_defconfig
@@ -395,6 +395,7 @@ CONFIG_SERIAL_FSL_LPUART_CONSOLE=y
 CONFIG_SERIAL_FSL_LINFLEXUART=y
 CONFIG_SERIAL_FSL_LINFLEXUART_CONSOLE=y
 CONFIG_SERIAL_DEV_BUS=y
+CONFIG_BDINFO=y
 CONFIG_VIRTIO_CONSOLE=y
 CONFIG_IPMI_HANDLER=m
 CONFIG_IPMI_DEVICE_INTERFACE=m
