dts:F+S:fsimx93: add CONFIG_IMX93_TOUCH_RESET
seems as if the TOUCH_RESET has been forgotten here.
The Goodix Touch requires a proper reset in order to work.

- Apply Reset GPIO for EE1010B1T-1CP
- Apply Reset GPIO for BT070L1060CS0I1AD-A

--- a/arch/arm64/boot/dts/F+S/displays/imx93-adp-lvds2lvds2-EE1010B1T-1CP.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx93-adp-lvds2lvds2-EE1010B1T-1CP.dtsi
@@ -109,8 +109,9 @@
 #endif /* CONFIG_IMX93_INVERTED_XY */
 		interrupt-parent = <&IMX93_TOUCH_INTERRUPT_GPIO_BANK>;
 		interrupts = <IMX93_TOUCH_INTERRUPT_GPIO_NUM IRQ_TYPE_EDGE_RISING>;
+		irq-gpios = <&IMX93_TOUCH_INTERRUPT_GPIO_BANK IMX93_TOUCH_INTERRUPT_GPIO_NUM GPIO_ACTIVE_HIGH>;
 #ifdef CONFIG_IMX93_TOUCH_RESET
-		reset-gpios = <&IMX93_TOUCH_RESET_GPIO_BANK IMX93_TOUCH_RESET_GPIO_NUM GPIO_ACTIVE_LOW>;
+		reset-gpios = <&IMX93_TOUCH_RESET_GPIO_BANK IMX93_TOUCH_RESET_GPIO_NUM GPIO_ACTIVE_HIGH>;
 #endif /* CONFIG_IMX93_TOUCH_RESET */
 	};
 
