--- a/arch/arm64/boot/dts/F+S/picocoremx93-BT070L1060CS0I1AD-A.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx93-BT070L1060CS0I1AD-A.dts
@@ -18,6 +18,7 @@
 #define IMX93_TOUCH_INTERRUPT_GPIO_BANK 		gpio2
 #define IMX93_TOUCH_INTERRUPT_GPIO_NUM 		15
 
+#define CONFIG_IMX93_TOUCH_RESET
 #define IMX93_TOUCH_RESET_GPIO_BANK gpio_adp
 #define IMX93_TOUCH_RESET_GPIO_NUM  5
 
