--- a/arch/arm64/boot/dts/F+S/picocoremx93-adp-lvds2lvds2-EE1010B1T-1CP.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx93-adp-lvds2lvds2-EE1010B1T-1CP.dts
@@ -8,10 +8,13 @@
 
 #define CONFIG_IMX93_DISPLAY
 
+#define CONFIG_IMX93_INVERTED_XY
+
 #define IMX93_TOUCH_I2C 			lpi2c8
 #define IMX93_TOUCH_INTERRUPT_GPIO_BANK 	gpio2
 #define IMX93_TOUCH_INTERRUPT_GPIO_NUM 		15
 
+#define CONFIG_IMX93_TOUCH_RESET
 #define IMX93_TOUCH_RESET_GPIO_BANK gpio_adp
 #define IMX93_TOUCH_RESET_GPIO_NUM  5
 
