--- a/arch/arm64/configs/fsimx8mp_defconfig
+++ b/arch/arm64/configs/fsimx8mp_defconfig
@@ -367,6 +367,7 @@ CONFIG_SPI_IMX=y
 CONFIG_SPI_PL022=y
 CONFIG_SPI_ROCKCHIP=y
 CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_GPIO=y
 CONFIG_SPI_SLAVE=y
 CONFIG_SPI_SLAVE_TIME=y
 CONFIG_SPI_SLAVE_SYSTEM_CONTROL=y
