dts:F+S: use correct eeprom driver for fsimx93
picocoremx93 and fs-osm-mx93 needs another eeprom driver for N24S64B
IC-Chip

--- a/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93.dtsi
+++ b/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93.dtsi
@@ -552,8 +552,9 @@ osm_uart_b: &lpuart5 {
 	status = "disabled";
 
 	eeprom: eeprom@50 {
-		compatible = "atmel,24c02";
+		compatible = "onnn,n24s64b", "atmel,24c64";
 		reg = <0x50>;
+		size = <8192>;
 		pagesize = <32>;
 	};
 };
