dts:F+S: remove UART_C/UART_D define in OSM93
For fs-osm-sf-mx93-adp-osm-bb, UART_C and UART_D is per default set as
undefined.

This ensures the correct Configuration for OSM93-SKITs

--- a/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93-adp-osm-bb.dts
+++ b/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93-adp-osm-bb.dts
@@ -14,8 +14,12 @@
 
 
 /* When Undefined, IO of UARTC and UARTD will be configured as GPIO */
-#define CONFIG_OSMSFMX93_UARTC
-#define CONFIG_OSMSFMX93_UARTD
+// #define CONFIG_OSMSFMX93_UARTC
+// #define CONFIG_OSMSFMX93_UARTD
+
+/* Enable to use CM33 and RPMSG */
+// #define SUPPORT_M33
+// #define SUPPORT_RPMSG
 
 #include "fs-osm-sf-mx93.dtsi"
 #include <dt-bindings/usb/pd.h>
