--- a/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93.dtsi
+++ b/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93.dtsi
@@ -161,28 +161,6 @@ osm_can_b: &flexcan2 {};
 #endif /* SUPPORT_RPMSG */
 	};
 
-#ifdef SUPPORT_M33
-	cm33: imx93-cm33 {
-		compatible = "fsl,imx93-cm33";
-#ifdef SUPPORT_RPMSG
-		mbox-names = "tx", "rx", "rxdb";
-		mboxes = <&mu1 0 1
-			  &mu1 1 1
-			  &mu1 3 1>;
-		memory-region = <&vdevbuffer>, <&vdev0vring0>, <&vdev0vring1>,
-				<&vdev1vring0>, <&vdev1vring1>, <&rsc_table>;
-#endif /* SUPPORT_RPMSG */
-		fsl,startup-delay-ms = <500>;
-	};
-
-	ethosu {
-		compatible = "arm,ethosu";
-		fsl,cm33-proc = <&cm33>;
-		memory-region = <&ethosu_mem>;
-		power-domains = <&mlmix>;
-	};
-#endif /* SUPPORT_M33 */
-
 	regulators {
 		compatible = "simple-bus";
 		#address-cells = <1>;
@@ -302,6 +280,32 @@ osm_can_b: &flexcan2 {};
 		status = "disabled";
 	};
 };
+
+#ifdef SUPPORT_M33
+&cm33 {
+#ifdef SUPPORT_RPMSG
+	mbox-names = "tx", "rx", "rxdb";
+	mboxes = <&mu1 0 1
+			&mu1 1 1
+			&mu1 3 1>;
+	memory-region = <&vdevbuffer>, <&vdev0vring0>, <&vdev0vring1>,
+			<&vdev1vring0>, <&vdev1vring1>, <&rsc_table>;
+#endif /* SUPPORT_RPMSG */
+	fsl,startup-delay-ms = <500>;
+	status = "okay";
+};
+
+#ifdef SUPPORT_RPMSG
+/{
+	ethosu {
+		compatible = "arm,ethosu";
+		fsl,cm33-proc = <&cm33>;
+		memory-region = <&ethosu_mem>;
+		power-domains = <&mlmix>;
+	};
+};
+#endif /* SUPPORT_RPMSG */
+#endif /* SUPPORT_M33 */
 
 /* UART declerations */
 &osm_uart_con {
