--- a/arch/arm64/boot/dts/F+S/picocoremx93.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx93.dtsi
@@ -143,28 +143,6 @@ pc_sai: &sai3	{};
 #endif /* SUPPORT_RPMSG */
 	};
 
-#ifdef SUPPORT_M33
-	cm33: imx93-cm33 {
-		compatible = "fsl,imx93-cm33";
-#ifdef SUPPORT_RPMSG
-		mbox-names = "tx", "rx", "rxdb";
-		mboxes = <&mu1 0 1
-			  &mu1 1 1
-			  &mu1 3 1>;
-		memory-region = <&vdevbuffer>, <&vdev0vring0>, <&vdev0vring1>,
-				<&vdev1vring0>, <&vdev1vring1>, <&rsc_table>;
-#endif /* SUPPORT_RPMSG */
-		fsl,startup-delay-ms = <500>;
-	};
-
-	ethosu {
-		compatible = "arm,ethosu";
-		fsl,cm33-proc = <&cm33>;
-		memory-region = <&ethosu_mem>;
-		power-domains = <&mlmix>;
-	};
-#endif /* SUPPORT_M33 */
-
 #ifdef CONFIG_PICOCOREMX93_SD_A
 	reg_usdhc2_vmmc: regulator-usdhc2 {
 		compatible = "regulator-fixed";
@@ -308,6 +286,32 @@ pc_sai: &sai3	{};
 	};
 #endif /* CONFIG_PICOCOREMX93_SGTL5000_AUDIO */
 };
+
+#ifdef SUPPORT_M33
+&cm33 {
+#ifdef SUPPORT_RPMSG
+	mbox-names = "tx", "rx", "rxdb";
+	mboxes = <&mu1 0 1
+			&mu1 1 1
+			&mu1 3 1>;
+	memory-region = <&vdevbuffer>, <&vdev0vring0>, <&vdev0vring1>,
+			<&vdev1vring0>, <&vdev1vring1>, <&rsc_table>;
+#endif /* SUPPORT_RPMSG */
+	fsl,startup-delay-ms = <500>;
+	status = "okay";
+};
+
+#ifdef SUPPORT_RPMSG
+/{
+	ethosu {
+		compatible = "arm,ethosu";
+		fsl,cm33-proc = <&cm33>;
+		memory-region = <&ethosu_mem>;
+		power-domains = <&mlmix>;
+	};
+};
+#endif /* SUPPORT_RPMSG */
+#endif /* SUPPORT_M33 */
 
 #ifdef CONFIG_PICOCOREMX93_I2S_A
 &pc_sai {
