dts:F+S:displays: add clock-frequency = 400kHz for TOUCH_I2C
The bus speed can suppress following error message:

ilitek_ts 3-0041: FW report max point:1 > panel info. max:0
ilitek_ts 3-0041: [ilitek_i2c_isr] err:-22

--- a/arch/arm64/boot/dts/F+S/displays/imx93-BT070L1060CS0I1AD-A.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx93-BT070L1060CS0I1AD-A.dtsi
@@ -96,6 +96,7 @@
 };
 
 &IMX93_TOUCH_I2C {
+	clock-frequency = <400000>;
 	/* Ilitek PCAP touch on Touch-Connector (I2C) */
 	touch: ilitek2130@41 {
 		compatible = "ilitek,ili2130";
