Add support for efusmx93
There will be some changes with the new revision 1,10 so this will only
work for revision 1,00.

Not workin:
 - Bluetooth
 - Audio
 - EhternetB if EthernetA is disabled

--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -88,3 +88,7 @@ dtb-$(CONFIG_ARCH_MXC) += \
 dtb-$(CONFIG_ARCH_MXC) += \
 			  fs-osm-sf-mx93-adp-osm-bb.dtb \
 			  fs-osm-sf-mx93-adp-osm-bb_BT070L1060CS0I1AD-A.dtb
+dtb-$(CONFIG_ARCH_MXC) += \
+			  efusmx93-SINTF.dtb \
+			  efusmx93-SINTF-ET070080DH6.dtb \
+			  efusmx93-SINTF-BT070L1060CS0I1AD-A.dtb
