--- a/arch/arm64/configs/fsimx93_defconfig
+++ b/arch/arm64/configs/fsimx93_defconfig
@@ -386,6 +386,7 @@ CONFIG_TOUCHSCREEN_GOODIX=m
 CONFIG_TOUCHSCREEN_ILITEK=m
 CONFIG_TOUCHSCREEN_EDT_FT5X06=m
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=m
+CONFIG_TOUCHSCREEN_TSC2004=m
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_PWM_BEEPER=m
 CONFIG_INPUT_PWM_VIBRA=m
