Update fsimx8mp to Kernel 6.6
- Add fsimx8mp.dtsi to be able make fixes to all fsimx8mp boards.
- Remove gpu_reserved node, as it is not in all boards memory range.
  CMA should be used instead.
- Remove vpu power domain nodes or else 8MP Lite will not boot.
- Use new pci dts entries
- SGTL5000 can turn on its own clock now. However, we still need to
  make sure that the clk parent is set to the same as in SAI
- fix build warning in imx8mp-audiomix
- Add new common defconfig for fsimx8mp/mm/mn

- Fix spi-nand merge error
- SGTL5000 i.MX8MP seems to need even more time to provide a stable
  clock, so increase the sleep time even further
- Activate the right touch controler for efusmx8mp RGB display

--- a/arch/arm64/boot/dts/F+S/armstonemx8mp.dts
+++ b/arch/arm64/boot/dts/F+S/armstonemx8mp.dts
@@ -291,7 +291,7 @@
 #undef CONFIG_ARMSTONEMX8MP_SPI_B
 #endif
 
-#include "../freescale/imx8mp.dtsi"
+#include "fsimx8mp.dtsi"
 #include "armstonemx8mp.dtsi"
 
 / {
