--- a/arch/arm64/boot/dts/F+S/efusmx8mp-ET070080DH6.dts
+++ b/arch/arm64/boot/dts/F+S/efusmx8mp-ET070080DH6.dts
@@ -36,5 +36,8 @@
 #define CONFIG_EFUSMX8MP_PANEL1	DISPLAY_NONE
 #define CONFIG_EFUSMX8MP_PANEL2	DISPLAY_NONE
 
+//#define CONFIG_EFUSMX8MP_4WTOUCH_SX8655_RGBADAPTER_EDT1
+#define CONFIG_EFUSMX8MP_4WTOUCH_TSC2004_RGBADAPTER_EDT2
+
 #include "efusmx8mp.dts"
 
