--- a/arch/arm64/boot/dts/F+S/fssmmx8mp.dts
+++ b/arch/arm64/boot/dts/F+S/fssmmx8mp.dts
@@ -104,7 +104,7 @@
 #undef CONFIG_FSSMMX8MP_PWM_OUT
 #endif
 
-#include "../freescale/imx8mp.dtsi"
+#include "fsimx8mp.dtsi"
 #include "fssmmx8mp.dtsi"
 
 / {
