--- a/arch/arm64/boot/dts/F+S/fssmmx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/fssmmx8mp.dtsi
@@ -14,6 +14,7 @@
 #include <dt-bindings/usb/pd.h>
 #include <dt-bindings/pwm/pwm.h>
 #include <dt-bindings/rtc/nxp,pcf85263.h>
+#include <dt-bindings/phy/phy-imx8-pcie.h>
 #include <fsversion.h>
 
 / {
@@ -641,13 +642,6 @@
 };
 #endif /* CONFIG_FSSMMX8MP_I2C_CAM1 */
 
-&audio_blk_ctrl {
-#ifdef CONFIG_FSSMMX8MP_SGTL5000_AUDIO
-	assigned-clocks = <&clk IMX8MP_CLK_SAI2>;
-	assigned-clock-parents = <&clk IMX8MP_AUDIO_PLL1_OUT>;
-#endif
-};
-
 #ifdef CONFIG_FSSMMX8MP_I2C_GP
 &i2c3 {
 	clock-frequency = <400000>;
@@ -996,28 +990,15 @@
 &pcie{
 	clkreq-gpio = <&pca6416 15 GPIO_ACTIVE_LOW>;
 	reset-gpio = <&pca6416 13 GPIO_ACTIVE_LOW>;
-	ext_osc = <0>;
-	bus-range = <0x00 0xff>;
-	clocks = <&clk IMX8MP_CLK_HSIO_ROOT>,
-		 <&clk IMX8MP_CLK_PCIE_AUX>,
-		 <&clk IMX8MP_CLK_HSIO_AXI>,
-		 <&clk IMX8MP_CLK_PCIE_ROOT>;
-	clock-names = "pcie", "pcie_aux", "pcie_phy", "pcie_bus";
-	assigned-clocks = <&clk IMX8MP_CLK_HSIO_AXI>,
-			  <&clk IMX8MP_CLK_PCIE_AUX>;
-	assigned-clock-rates = <500000000>, <10000000>;
-	assigned-clock-parents = <&clk IMX8MP_SYS_PLL2_500M>,
-					 <&clk IMX8MP_SYS_PLL2_50M>;
+	vpcie-supply = <&reg_vref_3v3>;
 	status = "okay";
 };
 
-&pcie_ep{
-	status = "disabled";
-};
-
-&pcie_phy{
-	ext_osc = <0>;
-	status = "okay";
+&pcie_phy {
+    fsl,refclk-pad-mode = <IMX8_PCIE_REFCLK_PAD_OUTPUT>;
+    clocks = <&hsio_blk_ctrl>;
+    clock-names = "ref";
+    status = "okay";
 };
 
 #ifdef CONFIG_FSSMMX8MP_USB_OTG
