--- a/arch/arm64/boot/dts/F+S/picocoremx8mn-ddr3l-lcdif-adp-mipi2rgb.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mn-ddr3l-lcdif-adp-mipi2rgb.dts
@@ -73,7 +73,7 @@
 	rgb-bridge@2d {
 		#address-cells = <1>;
 		#size-cells = <0>;
-	      	compatible = "lontium,lt9211";
+	      	compatible = "lontium,lt9211-fus";
 //		lt,debug-pattern;
 		/* 0 = LVDS, 1 = MIPI, 2 = TTL */
 		rx-source = /bits/ 8 <1>;
