--- a/arch/arm64/boot/dts/F+S/displays/imx8mm-lcdif-adp-mipi2rgb.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8mm-lcdif-adp-mipi2rgb.dtsi
@@ -106,7 +106,7 @@
 	rgb-bridge@2d {
 		#address-cells = <1>;
 		#size-cells = <0>;
-		compatible = "lontium,lt9211";
+		compatible = "lontium,lt9211-fus";
 		reg = <0x2d>;
 		/* 0 = LVDS, 1 = MIPI, 2 = TTL */
 		rx-source = /bits/ 8 <1>;
