Update fsimx8mm to Kernel 6.6
- Use common fsimx8mm.dtsi
- Use simple-audio-card driver for sgtl5000, because the old
  platform driver is not available anymore
- the gpmi driver now needs an dts flag-
- Fix DSA support as built in so the picocoremx8mm_ddr3l can start
  ethernet kernel boot. There are still occasional packege erros,
  which do not seem to influence performance.
- Fix fus simple panel display template

--- a/arch/arm64/boot/dts/F+S/displays/imx8mm-lcdif-adp-mipi2rgb.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8mm-lcdif-adp-mipi2rgb.dtsi
@@ -228,6 +228,8 @@
 		touchscreen-max-pressure = <2048>;
 		touchscreen-inverted-y;
 		ti,x-plate-ohms = <280>;
+		ti,pre-charge-time = <4>;
+		ti,sense-time-sel = <3>;
 		//ti,esd-recovery-timeout-ms = <8000>;
 	};
 };
