--- a/arch/arm64/configs/fsimx8_defconfig
+++ b/arch/arm64/configs/fsimx8_defconfig
@@ -110,7 +110,8 @@ CONFIG_IP6_NF_TARGET_REJECT=m
 CONFIG_IP6_NF_MANGLE=m
 CONFIG_IP6_NF_NAT=m
 CONFIG_IP6_NF_TARGET_MASQUERADE=m
-CONFIG_BRIDGE=m
+CONFIG_BRIDGE=y
+CONFIG_NET_DSA=y
 CONFIG_LLC2=y
 CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_MULTIQ=y
@@ -252,6 +253,7 @@ CONFIG_MACVTAP=m
 CONFIG_TUN=y
 CONFIG_VETH=m
 CONFIG_VIRTIO_NET=y
+CONFIG_NET_DSA_MICROCHIP_KSZ_COMMON=y
 CONFIG_NET_DSA_MICROCHIP_KSZ9477=y
 CONFIG_NET_DSA_MICROCHIP_KSZ9477_I2C=y
 CONFIG_ATL1C=m
