--- a/arch/arm64/boot/dts/F+S/osm8mm.dtsi
+++ b/arch/arm64/boot/dts/F+S/osm8mm.dtsi
@@ -9,10 +9,11 @@
 /dts-v1/;
 
 
-#include "../freescale/imx8mm.dtsi"
+#include "fsimx8mm.dtsi"
 #include <dt-bindings/pwm/pwm.h>
 #include <dt-bindings/rtc/nxp,pcf85263.h>
 #include <dt-bindings/usb/pd.h>
+#include <dt-bindings/phy/phy-imx8-pcie.h>
 #include <fsversion.h>
 
 /* SOC-nodes to OSM-nodes */
@@ -219,12 +220,6 @@ osm_pcie_a: &pcie0 {};
 	};
 #endif
 #endif
-
-	pcie0_refclk: pcie0-refclk {
-		compatible = "fixed-clock";
-		#clock-cells = <0>;
-		clock-frequency = <100000000>;
-	};
 };
 
 /* OSM8MM_I2C_INT */
@@ -525,6 +520,15 @@ osm_pcie_a: &pcie0 {};
 #endif
 
 #ifdef CONFIG_OSM8MM_PCIE_A
+
+&pcie_phy {
+    fsl,refclk-pad-mode = <IMX8_PCIE_REFCLK_PAD_OUTPUT>;
+	fsl,clkreq-unsupported;
+	fsl,tx-deemph-gen1 = <0x2d>;
+	fsl,tx-deemph-gen2 = <0xf>;
+	status = "okay";
+};
+
 &osm_pcie_a {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_osm_pcie_a>;
@@ -533,17 +537,10 @@ osm_pcie_a: &pcie0 {};
 	 * wakeup source and it is not a specific driver issue
 	 */
 	//wake-gpio = <&gpio3 20 GPIO_ACTIVE_LOW>;
-	clocks = <&clk IMX8MM_CLK_PCIE1_ROOT>,
-		 <&clk IMX8MM_CLK_PCIE1_AUX>,
-		 <&clk IMX8MM_CLK_PCIE1_PHY>,
-		 <&pcie0_refclk>;
-	clock-names = "pcie", "pcie_aux", "pcie_phy", "pcie_bus";
 	assigned-clocks = <&clk IMX8MM_CLK_PCIE1_AUX>,
-			  <&clk IMX8MM_CLK_PCIE1_PHY>,
 			  <&clk IMX8MM_CLK_PCIE1_CTRL>;
-	assigned-clock-rates = <10000000>, <100000000>, <250000000>;
+	assigned-clock-rates = <10000000>, <250000000>;
 	assigned-clock-parents = <&clk IMX8MM_SYS_PLL2_50M>,
-				 <&clk IMX8MM_SYS_PLL2_100M>,
 				 <&clk IMX8MM_SYS_PLL2_250M>;
 	ext_osc = <0>;
 	l1ss-disabled;
@@ -750,6 +747,7 @@ osm_pcie_a: &pcie0 {};
 };
 
 &gpmi {
+	fsl,use-minimum-ecc;
 	status = "okay";
 };
 
