--- a/arch/arm64/boot/dts/F+S/picocoremx8mn-ddr3l.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mn-ddr3l.dts
@@ -115,7 +115,7 @@
 #undef CONFIG_PICOCOREMX8MX_NANO_USB_OTG1_USBC
 #endif
 
-#include "../freescale/imx8mn.dtsi"
+#include "fsimx8mn.dtsi"
 #include <dt-bindings/pwm/pwm.h>
 #include <dt-bindings/rtc/nxp,pcf85263.h>
 #include <dt-bindings/usb/pd.h>
@@ -315,15 +315,18 @@
 #endif
 
 #ifdef CONFIG_PICOCOREMX8MX_NANO_SGTL5000_AUDIO
-	sound-sgtl5000 {
+	sound_sgtl5000: sound-sgtl5000 {
+		#sound-dai-cells = <0>;
 		compatible = "fsl,imx-audio-sgtl5000";
-		cpu-dai = <&sai5>;
-		audio-codec = <&sgtl5000>;
 		model = "imx-sgtl5000";
+		audio-cpu = <&sai5>;
+		audio-codec = <&sgtl5000>;
+		audio-asrc = <&easrc>;
 		audio-routing =
 			"LINE_IN", "Line In Jack",
-//###			"MIC_IN", "Mic Jack",
-//###			"Line Out Jack", "LINE_OUT",
+			"Mic Jack", "Mic Bias",
+			"MIC_IN", "Mic Jack",
+			"Line Out Jack", "LINE_OUT",
 			"Headphone Jack", "HP_OUT";
 	};
 #endif
@@ -354,6 +357,7 @@
 
 #ifdef CONFIG_PICOCOREMX8MX_NANO_SGTL5000_AUDIO
 	sgtl5000: sgtl5000@a {
+		#sound-dai-cells = <0>;
 		compatible = "fsl,sgtl5000";
 		/* MCLK is needed for i2c sgtl driver */
 		pinctrl-names = "default";
@@ -663,6 +667,11 @@
 
 	status = "okay";
 };
+
+&easrc {
+	fsl,asrc-rate  = <48000>;
+	status = "okay";
+};
 #endif
 
 #ifdef CONFIG_PICOCOREMX8MX_NANO_ETH_I2C
@@ -693,6 +702,9 @@
 				reg = <2>;
 				label = "cpu";
 				ethernet = <&fec1>;
+				phy-mode = "rgmii-txid";
+				tx-internal-delay-ps = <1500>;
+				rx-internal-delay-ps = <0>;
 				fixed-link {
 					speed = <1000>;
 					full-duplex;
@@ -1024,6 +1036,7 @@
 &gpmi {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_gpmi_nand_1>;
+	fsl,use-minimum-ecc;
 	status = "okay";
 };
 #endif
