--- a/arch/arm64/configs/fsimx8_defconfig
+++ b/arch/arm64/configs/fsimx8_defconfig
@@ -639,6 +639,7 @@ CONFIG_USB_CONFIGFS_F_UAC2=y
 CONFIG_USB_CONFIGFS_F_MIDI=y
 CONFIG_USB_CONFIGFS_F_HID=y
 CONFIG_USB_CONFIGFS_F_UVC=y
+CONFIG_USB_CONN_GPIO=y
 CONFIG_USB_ZERO=m
 CONFIG_USB_AUDIO=m
 CONFIG_USB_ETH=m
