power:supply:bq2457: add vin-supply regulator
The BQ2457 with VIN is dependent on a voltage source and therefore
requires a regulator. If the voltage source is switchable, the driver
must be able to control the regulator.

If no regulator is defined, a dummy regulator is created.

--- a/Documentation/devicetree/bindings/power/supply/bq24257.yaml
+++ b/Documentation/devicetree/bindings/power/supply/bq24257.yaml
@@ -25,6 +25,9 @@ properties:
 
   interrupts:
     maxItems: 1
+  
+  vin-supply:
+    maxItems: 1
 
   ti,battery-regulation-voltage:
     $ref: /schemas/types.yaml#/definitions/uint32
