dts:F+S:picocoremx93: add bluetooth label
If WLAN/BT is not equipped, the node is deactivated in the DTS via
U-BOOT

--- a/arch/arm64/boot/dts/F+S/picocoremx93.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx93.dtsi
@@ -762,7 +762,7 @@ pc_sai: &sai3	{};
 	uart-has-rtscts;
 #endif /* CONFIG_PICOCOREMX93_UART_B_RTSCTS */
 #ifdef CONFIG_PICOCOREMX93_UART_B_BT
-	bluetooth {
+	bluetooth: bluetooth {
 		compatible = "nxp,88w8987-bt";
 		fw-init-baudrate = <115200>;
 	};
