--- a/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93-adp-osm-bb_BT070L1060CS0I1AD-A.dts
+++ b/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93-adp-osm-bb_BT070L1060CS0I1AD-A.dts
@@ -12,10 +12,7 @@
 * GNU General Public License for more details.
 */
 
-
-
 #define CONFIG_IMX93_DISPLAY
-#define IMX93_TOUCH_INTERRUPT_GPIO_NUM OSM_GPIO_A_3_PIN
 
 #include "fs-osm-sf-mx93-adp-osm-bb.dts"
 
@@ -23,7 +20,12 @@ reg_vlcd: &reg_disp_vdd_en {
     status = "okay";
 };
 IMX93_TOUCH_I2C: &osm_i2c_cam {};
+#if ADP_OSM_BB_REV == 130
+IMX93_TOUCH_INTERRUPT_GPIO_BANK: &gpio3 {};
+#define IMX93_TOUCH_INTERRUPT_GPIO_NUM OSM_GPIO_A_0_PIN
+#else
 IMX93_TOUCH_INTERRUPT_GPIO_BANK: &gpio2 {};
-
+#define IMX93_TOUCH_INTERRUPT_GPIO_NUM OSM_GPIO_A_3_PIN
+#endif
 
 #include "displays/imx93-BT070L1060CS0I1AD-A.dtsi"
